--- a/tp-rubenoviedo/index.html
+++ b/tp-rubenoviedo/index.html
@@ -1,1 +1,69 @@
 
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <title>Tarjeta Interactiva</title>
+  <!-- Manifest para instalar la PWA -->
+  <link rel="manifest" href="manifest.webmanifest" />
+  <!-- Color de la barra del sistema -->
+  <meta name="theme-color" content="#ffffff" />
+  <!-- Meta Apple para que se vea como app en iOS -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-title" content="Tarjeta" />
+  <!-- CSS principal -->
+  <link rel="stylesheet" href="style.css?v=7" />
+</head>
+<body>
+  <main class="viewport">
+    <div class="card" id="card" aria-label="Tarjeta de presentación interactiva">
+      <!-- Cara frontal (imagen delantera) -->
+      <img class="face front" src="frontruben.png?v=7" alt="Front Ruben" draggable="false">
+      <!-- Cara trasera (imagen con QR) -->
+      <img class="face back"  src="backruben.png?v=7"  alt="Back Ruben"  draggable="false">
+
+      <!-- Hotspots: áreas clicables SOLO para la cara frontal -->
+      <div class="hotspots" aria-hidden="true">
+        <!-- WhatsApp: zona sobre el icono del teléfono -->
+        <a class="hotspot hs-whatsapp"
+           href="https://wa.me/573212698837"
+           target="_blank" rel="noopener"
+           aria-label="Abrir WhatsApp"></a>
+        <!-- Instagram: zona sobre el icono de Instagram -->
+        <a class="hotspot hs-instagram"
+           href="https://instagram.com/fertilitycare.col"
+           target="_blank" rel="noopener"
+           aria-label="Abrir Instagram"></a>
+        <!-- Sitio web: zona sobre el icono y texto de la web -->
+        <a class="hotspot hs-web"
+           href="https://www.fertilitycare.com.co"
+           target="_blank" rel="noopener"
+           aria-label="Abrir sitio web"></a>
+      </div>
+    </div>
+  </main>
+
+  <!-- Lógica de giro / UX -->
+  <script src="app.js?v=7"></script>
+
+  <!-- Registro del Service Worker para modo offline -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('./sw.js').catch(console.error);
+      });
+    }
+  </script>
+</body>
+</html>
+
+<!--
+DOCUMENTACIÓN:
+- <link rel="manifest"> expone la info de instalación (iconos, nombre, start_url).
+- .face front/back son las dos caras de la tarjeta.
+- .hotspots contiene <a> invisibles posicionados encima de los iconos del frente.
+- Cada <a> tiene su link: WhatsApp (wa.me), Instagram y Web.
+- El SW (sw.js) cachea archivos para uso offline.
+-->
