--- a/tp-rubenoviedo/index.html
+++ b/tp-rubenoviedo/index.html
@@ -42,7 +42,7 @@
 
         <!-- 21) Sitio web (icono + texto) -->
         <a class="hotspot hs-web"
-           href="https://www.fertilitycare.com.co"
+           href="https://fertilitycare.com.co/"
            target="_blank" rel="noopener"
            aria-label="Abrir sitio web"></a>
       </div>
